--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,7 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "options": {
-        "buildCommand": "npm run build",
-        "outputDirectory": "dist"
-      }
+      "use": "@vercel/static-build"
     },
     {
       "src": "server/index.ts",
