--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "builds": [
     {
-      "src": "client/package.json",
-      "use": "@vercel/static-build"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "root": "client" }
     },
     {
       "src": "server/index.ts",
